# mlx-rs

./: .gitignore  ANE_OFFLOAD_BLOG.md  API_COVERAGE.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  WHATSNEW.md  check_env.sh  weights_dequant.npz  weights_dequant.safetensors  weights_fp32.npz  weights_fp32.safetensors
.github/workflows/: auto_release.yml
ane-bridge/: Cargo.toml  build.rs
ane-bridge/src/: bridge.m  lib.rs
benchmarks/: bench_mlx.py  bench_mlx.rs  bench_mlx2.rs  bench_torch.py  run_all.sh
benchmarks/bench_results/: python_mlx.txt  pytorch.txt  rust.txt
docs/: Rust_C_ABI_Mismatch _Quantization.md
mlx/: .gitignore  Cargo.toml  weights_dequant.npz  weights_dequant.safetensors  weights_fp32.npz  weights_fp32.safetensors
mlx-derive/: Cargo.toml
mlx-derive/src/: lib.rs
mlx-sys/: Cargo.toml  build.rs
mlx-sys/src/: lib.rs
mlx/examples/: alg_main.rs  ane_bench.rs  basic_ops.rs  cnn.rs  distributed_main.rs  fft_main.rs  gpt2_ane_bench.rs  matrix_ops.rs  mistral.rs  mlp.rs  quantize_main.rs  rnn_main.rs  transformer_main.rs
mlx/src/: array.rs  device.rs  dtype.rs  lib.rs  transforms.rs  tree.rs
mlx/src/ane/: cache.rs  convert.rs  mil.rs  mod.rs  ops.rs
mlx/src/distributed/: dist_group.rs  dist_ops.rs  mod.rs
mlx/src/io/: mod.rs  numpy.rs  safetensors.rs
mlx/src/nn/: losses.rs  mod.rs  module.rs  optimizers.rs  schedulers.rs
mlx/src/nn/layers/: activations.rs  conv.rs  dropouts.rs  embedding.rs  flatten.rs  linear.rs  mod.rs  normalization.rs  pooling.rs  recurrent.rs  sequential.rs
mlx/src/nn/transformers/: decoder.rs  encoder.rs  kv_cache.rs  mod.rs  multi_head_attention.rs  scaled_dot_product.rs
mlx/src/operations/: fft.rs  linalg.rs  mod.rs  ops.rs
mlx/src/quantization/: mod.rs  q_ops.rs  quantized_linear.rs
mlx/tests/: test_array_core.rs  test_io.rs  test_nn_layers.rs  test_schedulers.rs  test_transformers.rs
