[package]
name = "mlx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mlx-sys = { path = "../mlx-sys" }
mlx-derive = {path = "../mlx-derive"}
zip="0.6"
tokenizers = "0.19"


[[example]]
name = "basic_ops"

[[example]]
name = "mlp"

[[example]]
name = "bench_mlx_rs"
path = "../benchmarks/bench_mlx.rs"

[[example]]
name = "bench_mlx_rs2"
path = "../benchmarks/bench_mlx2.rs"